--- a/views/admin/sales.ejs
+++ b/views/admin/sales.ejs
@@ -872,7 +872,7 @@
                 </a>
                 <form action="/admin/sales/delete/<%= sale.id %>" method="POST" style="flex: 1;" onsubmit="return confirm('Are you sure you want to delete this sale?')">
                   <button type="submit" class="btn btn-sm btn-danger" style="width: 100%;">
-                    <i class="fas fa-trash"></i> Delete
+                    <i class="fas fa-trash"></i>
                   </button>
                 </form>
               </div>
